// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverflowMenu Behavior closes menu when user clicks outside of menu 1`] = `
<div>
  <div
    class="sc-bdVaJa huqire"
    data-testid="overflow-menu"
  >
    <button
      class="sc-bwzfXH sc-htpNat gTrUOb"
      data-testid="overflow-menu-toggle"
    >
      Toggle menu
    </button>
  </div>
</div>
`;

exports[`OverflowMenu Behavior does not close menu when user clicks inside of menu 1`] = `
<div>
  <div
    class="sc-bdVaJa huqire"
    data-testid="overflow-menu"
  >
    <button
      class="sc-bwzfXH sc-htpNat tfKyv"
      data-testid="overflow-menu-toggle"
      open=""
    >
      Toggle menu
    </button>
    <div
      class="sc-ifAKCX dEJfdm"
    >
      <button
        class="sc-bwzfXH sc-bxivhb cCHJQU"
        data-testid="option"
      >
        Option 1
      </button>
      <button
        class="sc-bwzfXH sc-bxivhb cCHJQU"
      >
        Option 2
      </button>
    </div>
  </div>
</div>
`;

exports[`OverflowMenu Behavior hides options when toggle button is pressed twice 1`] = `
<div>
  <div
    class="sc-bdVaJa huqire"
    data-testid="overflow-menu"
  >
    <button
      class="sc-bwzfXH sc-htpNat gTrUOb"
      data-testid="overflow-menu-toggle"
    >
      Toggle menu
    </button>
  </div>
</div>
`;

exports[`OverflowMenu Behavior renders options when opened 1`] = `
<div>
  <div
    class="sc-bdVaJa huqire"
    data-testid="overflow-menu"
  >
    <button
      class="sc-bwzfXH sc-htpNat tfKyv"
      data-testid="overflow-menu-toggle"
      open=""
    >
      Toggle menu
    </button>
    <div
      class="sc-ifAKCX dEJfdm"
    >
      <button
        class="sc-bwzfXH sc-bxivhb cCHJQU"
      >
        Option 1
      </button>
      <button
        class="sc-bwzfXH sc-bxivhb cCHJQU"
      >
        Option 2
      </button>
    </div>
  </div>
</div>
`;

exports[`OverflowMenu Structure renders closed 1`] = `
<div>
  <div
    class="sc-bdVaJa huqire"
    data-testid="overflow-menu"
  >
    <button
      class="sc-bwzfXH sc-htpNat gTrUOb"
      data-testid="overflow-menu-toggle"
    >
      Toggle menu
    </button>
  </div>
</div>
`;
